Add version to / (#77)

--- a/views/base.ejs
+++ b/views/base.ejs
@@ -25,7 +25,7 @@
     </p>
     <h2>Available Endpoints</h2>
     <p>
-      All the following endpoints are available on this instance of jskos-server:
+      This service provides a subset of JSKOS API <%= config.version %>. All the following endpoints are available on this instance of jskos-server:
     </p>
     <h3>General</h3>
     <ul>
