--- a/views/base.ejs
+++ b/views/base.ejs
@@ -55,16 +55,25 @@
       <li>PATCH /mappings/:_id - Adjusts a mapping in the database (<% if (config.mappings.update.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#patch-mappings_id" target="_blank">documentation</a>)</li>
       <% } %>
       <% if (config.mappings.delete) { %>
-      <li>DELETE /mappings/:_id - Deletes a mapping from the database (<% if (config.mappings.delete.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#put-mappings_id" target="_blank">documentation</a>)</li>
+      <li>DELETE /mappings/:_id - Deletes a mapping from the database (<% if (config.mappings.delete.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#delete-mappings_id" target="_blank">documentation</a>)</li>
       <% } %>
     </ul>
     <% } %>
     <% if (config.schemes) { %>
     <h3>Concept Schemes</h3>
     <ul>
-      <li>GET <a href="voc">/voc</a> - Returns a list of terminologies (concept schemes) (<a href="https://github.com/gbv/jskos-server#get-voc" target="_blank">documentation</a>)</li>
+      <li>GET <a href="voc">/voc</a> - Returns a list of vocabularies (concept schemes) (<a href="https://github.com/gbv/jskos-server#get-voc" target="_blank">documentation</a>)</li>
       <li>GET <a href="voc/top">/voc/top</a> - Lists top concepts for a concept scheme (<a href="https://github.com/gbv/jskos-server#get-voctop" target="_blank">documentation</a>)</li>
       <li>GET <a href="voc/concepts">/voc/concepts</a> - Lists concepts for a concept scheme (<a href="https://github.com/gbv/jskos-server#get-vocconcepts" target="_blank">documentation</a>)</li>
+      <% if (config.schemes.create) { %>
+      <li>POST /voc - Saves a concept scheme or multiple concept schemes in the database (<% if (config.schemes.create.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#post-voc" target="_blank">documentation</a>)</li>
+      <% } %>
+      <% if (config.schemes.update) { %>
+      <li>PUT /voc - Overwrites a concept scheme in the database (<% if (config.schemes.update.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#put-voc" target="_blank">documentation</a>)</li>
+      <% } %>
+      <% if (config.schemes.delete) { %>
+      <li>DELETE /voc - Deletes a concept scheme from the database (<% if (config.schemes.delete.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#delete-voc" target="_blank">documentation</a>)</li>
+      <% } %>
     </ul>
     <% } %>
     <% if (config.concepts) { %>
@@ -75,6 +84,15 @@
       <li>GET <a href="ancestors">/ancestors</a> - Returns ancestor concepts for a concept (<a href="https://github.com/gbv/jskos-server#get-ancestors" target="_blank">documentation</a>)</li>
       <li>GET <a href="suggest">/suggest</a> - Returns concept suggestions (<a href="https://github.com/gbv/jskos-server#get-suggest" target="_blank">documentation</a>)</li>
       <li>GET <a href="search">/search</a> - Concept search (<a href="https://github.com/gbv/jskos-server#get-search" target="_blank">documentation</a>)</li>
+      <% if (config.concepts.create) { %>
+      <li>POST /data - Saves a concept or multiple concepts in the database (<% if (config.schemes.create.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#post-data" target="_blank">documentation</a>)</li>
+      <% } %>
+      <% if (config.concepts.update) { %>
+      <li>PUT /data - Overwrites a concept in the database (<% if (config.schemes.update.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#put-data" target="_blank">documentation</a>)</li>
+      <% } %>
+      <% if (config.concepts.delete) { %>
+      <li>DELETE /data - Deletes a concept from the database (<% if (config.schemes.delete.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#delete-data" target="_blank">documentation</a>)</li>
+      <% } %>
     </ul>
     <% } %>
     <% if (config.annotations) { %>
