Document validate endpoint at /

--- a/views/base.ejs
+++ b/views/base.ejs
@@ -27,6 +27,7 @@
     <ul>
       <li>GET <a href="status">/status</a> - Returns a status object (<a href="status.schema.json">JSON Schema</a>, <a href="https://github.com/gbv/jskos-server#get-status" target="_blank">documentation</a>)</li>
       <li>GET <a href="checkAuth">/checkAuth</a> - Endpoint to check whether a user is authorized (<a href="https://github.com/gbv/jskos-server#get-checkauth" target="_blank">documentation</a>)</li>
+      <li>POST/GET <a href="validate">/validate</a> - Endpoint to validate JSKOS data (<a href="https://github.com/gbv/jskos-server#post-validate" target="_blank">documentation</a>)</li>
     </ul>
     <% if (config.concordances) { %>
     <h3>Concordances</h3>
