Move concept routes from /data to /concepts (#193)

--- a/views/base.ejs
+++ b/views/base.ejs
@@ -28,6 +28,7 @@
       <li>GET <a href="status">/status</a> - Returns a status object (<a href="status.schema.json">JSON Schema</a>, <a href="https://github.com/gbv/jskos-server#get-status" target="_blank">documentation</a>)</li>
       <li>GET <a href="checkAuth">/checkAuth</a> - Endpoint to check whether a user is authorized (<a href="https://github.com/gbv/jskos-server#get-checkauth" target="_blank">documentation</a>)</li>
       <li>POST/GET <a href="validate">/validate</a> - Endpoint to validate JSKOS data (<a href="https://github.com/gbv/jskos-server#post-validate" target="_blank">documentation</a>)</li>
+      <li>GET <a href="data">/data</a> - Returns data for a certain URI or URIs (concept schemes, concepts, concordances, mappings, annotations) (<a href="https://github.com/gbv/jskos-server#get-data" target="_blank">documentation</a>)</li>
     </ul>
     <% if (config.concordances) { %>
     <h3>Concordances</h3>
@@ -93,19 +94,19 @@
     <% if (config.concepts) { %>
     <h3>Concepts</h3>
     <ul>
-      <li>GET <a href="data">/data</a> - Returns detailed data for concepts or concept schemes (<a href="https://github.com/gbv/jskos-server#get-data" target="_blank">documentation</a>)</li>
+      <li>GET <a href="concepts">/concepts</a> - Returns detailed data for concepts or concept schemes (<a href="https://github.com/gbv/jskos-server#get-concepts" target="_blank">documentation</a>)</li>
       <li>GET <a href="narrower">/narrower</a> - Returns narrower concepts for a concept (<a href="https://github.com/gbv/jskos-server#get-narrower" target="_blank">documentation</a>)</li>
       <li>GET <a href="ancestors">/ancestors</a> - Returns ancestor concepts for a concept (<a href="https://github.com/gbv/jskos-server#get-ancestors" target="_blank">documentation</a>)</li>
       <li>GET <a href="suggest">/suggest</a> - Returns concept suggestions (<a href="https://github.com/gbv/jskos-server#get-suggest" target="_blank">documentation</a>)</li>
       <li>GET <a href="search">/search</a> - Concept search (<a href="https://github.com/gbv/jskos-server#get-search" target="_blank">documentation</a>)</li>
       <% if (config.concepts.create) { %>
-      <li>POST /data - Saves a concept or multiple concepts in the database (<% if (config.schemes.create.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#post-data" target="_blank">documentation</a>)</li>
+      <li>POST /concepts - Saves a concept or multiple concepts in the database (<% if (config.schemes.create.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#post-concepts" target="_blank">documentation</a>)</li>
       <% } %>
       <% if (config.concepts.update) { %>
-      <li>PUT /data - Overwrites a concept in the database (<% if (config.schemes.update.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#put-data" target="_blank">documentation</a>)</li>
+      <li>PUT /concepts - Overwrites a concept in the database (<% if (config.schemes.update.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#put-concepts" target="_blank">documentation</a>)</li>
       <% } %>
       <% if (config.concepts.delete) { %>
-      <li>DELETE /data - Deletes a concept from the database (<% if (config.schemes.delete.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#delete-data" target="_blank">documentation</a>)</li>
+      <li>DELETE /concepts - Deletes a concept from the database (<% if (config.schemes.delete.auth) { %>authentication needed, <% } %><a href="https://github.com/gbv/jskos-server#delete-concepts" target="_blank">documentation</a>)</li>
       <% } %>
     </ul>
     <% } %>
